infra/k8s-dev/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-server
  template:
    metadata:
      labels:
        app: test-server
    spec:
      containers:
        - name: test-server
          image: sadeghsalesi/test-server
---
apiVersion: v1
kind: Service
metadata:
  name: test-server-srv
spec:
  selector:
    app: test-server
  type: ClusterIP
  ports:
    - name: test-server
      protocol: TCP
      port: 8000
      targetPort: 8000
